==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.792
??-??-202?
Updated by RoboCop
--------------------------------------------------------------------------------

- Replaced most of the C style casts with C++ casts

- Increased engineer maintain sentry priority task

- Increased medic priority task to buff and heal team mates

- Increased collect ammo priority to allow both engineers and snipers for defensive tasks

- Reduced sniper accuracy for each of the 5 bot skill settings

- Enhanced the dustbowl waypoints even further to remove lame sentry deployment areas

- Fixed depreciation warning for 'SpyDetect'

- Fixed some potential code issues

Known bugs:-  

>> '[META] WARNING: Plugin didn't set meta_result: foxbot_mm.so:engClientCommand()' still appears to occur

>> Soldier bots tend to struggle for rocket jumping in certain areas

>> botdontmove, bot_chat, bot_bot_balance and bot_team_balance cvars may not be 100% operational

>> FoxBot appears to crash sometimes on Windows Listenservers

--------------------------------------------------------------------------------
Version 0.791
August-07-2018
Updated by RoboCop
--------------------------------------------------------------------------------

- Removed unwanted tchar.h dependencies that are no longer required - Thanks to Globoss

- Linux build should now work for Assault and Capture Point maps due to syntax error fixed - Thanks to Globoss

- Fixed Write Strings and compile time for version.cpp that fails on GCC 6+

- Fixed extdll.h that appears to fail to compile on GCC 6+ for #ifndef min and max

- Added optimisation for faster float point for Win32 build

- Linux build optimised for floating-point arithmetic and tuned for newer arch

- bot_job_think.cpp should be fairly adjusted for the bots to choose their paths and tasks wisely
