@@ -36,8 +36,8 @@ static META_FUNCTIONS gMetaFunctionTable = {
 plugin_info_t Plugin_info = {
 	META_INTERFACE_VERSION,                       // ifvers
 	"FoxBot",                                     // name
-	"0.792-APG",                                    // version
-	"22/05/2019",                                  // date
+	"0.792-beta",                                    // version
+	"21/03/2020",                                  // date
 	"Tom Simpson & RoboCop <robocop@lycos.co.uk>", // author
 	"https://apg-clan.org/",                   // url
 	//"http://www.omni-bot.com/",	// url
